# YTBLND

./: CMakeLists.txt  Doxyfile  README.md  YTBLND-UML.drawio  build_dev_src.sh  build_src.sh  example_file.txt  generate_docs.sh  install_local.sh  install_local_dev.sh  run_tests.sh  run_ytblnd_proto.sh  test.csv  test.md  test_live_backend_connectivity.sh  ytblnd.db
Docs/: Description.md  Feature_List.md  Front_End_Requirements_for_Server_Communication.md  Home.md  Other_Notes.md  Page_Flow_and_Validations.md  Product_Design.md  Project_Structure.md  Project_Structure_and_UML.md  Prototype_Details.md  README.md  Reasons_for_steering_away_from_a_complete_C++_proj.md  Risks.md  User_Stories.md  Wiki-Home.md  YTBLNDMar9__2_.f0  test.md
Docs/Resources/: checkered_wave_background.ai  checkered_wave_background.eps
Wiki-Home/: Feature_List.md  Wiki-Home.md
Wiki-Home-Files/: Other_Notes.md  Project_Name_YT_BLND.md
YTBLND/AppInfrastructure/: CsvParser.cpp  CsvSource.cpp  DataExtractor.cpp  DataExtractor.hpp  DataSaver.hpp  FileBin.hpp  FileFormatter.hpp  FileSource.hpp  Parser.hpp
YTBLND/AppLayer/: AppController.h  AppState.cpp  EventRouter.cpp
YTBLND/ModelLayer/: Blend.h  Channel.cpp  Channel.h  Friend.cpp  Friend.h  User.cpp  User.h  Video.cpp  Video.h  VideoEntry.cpp  VideoEntry.h  YouTubeData.cpp  YouTubeData.h
YTBLND/ServiceLayer/: FileBin.hpp  FileSource.hpp  Parser.hpp
YTBLND_src/: .gitignore  CMakeLists.txt  ServerConfig.hpp  main.cpp
YTBLND_src/AlgorithmLayer/: IBlendAlgorithm.h  IBlendAlgorithm.hpp  RandomBlendAlgorithm.cpp  RandomBlendAlgorithm.h  RandomBlendAlgorithm.hpp  WeightedBlendAlgorithm.hpp
YTBLND_src/AppInfrastructure/: CsvParser.cpp  CsvParser.hpp  CsvSource.cpp  CsvSource.hpp  DataExtractor.cpp  DataExtractor.hpp  DataSaver.hpp  FileBin.hpp  FileFormatter.hpp  FileSource.hpp  File_ID.hpp  HtmlParser.cpp  HtmlSource.cpp  Parser.hpp  WatchHistoryParser.cpp  WatchHistoryParser.hpp  WatchLaterParser.cpp  WatchLaterParser.hpp  YouTubeDataImporter.cpp  YouTubeDataImporter.hpp  text_dump.txt
YTBLND_src/AppLayer/: AppController.cpp  AppController.h  AppController.hpp  AppState.cpp  AppState.h  AppState.hpp  EventRouter.cpp  EventRouter.hpp
YTBLND_src/ModelLayer/: Blend.cpp  Blend.h  Blend.hpp  Channel.cpp  Channel.hpp  ChatRoom.cpp  ChatRoom.h  ChatRoom.hpp  Friend.cpp  Friend.hpp  JsonUtils.hpp  Message.cpp  Message.hpp  User.cpp  User.h  User.hpp  Video.cpp  Video.h  Video.hpp  VideoEntry.cpp  VideoEntry.hpp  YouTubeData.cpp  YouTubeData.h  YouTubeData.hpp
YTBLND_src/ServiceLayer/: ChatWebSocket.cpp  ChatWebSocket.hpp  DataManager.h  DataManager.hpp  HttpClient.cpp  HttpClient.hpp  RequestJsonBuilder.cpp  RequestJsonBuilder.hpp  SqliteDataManager.cpp  SqliteDataManager.h  SqliteDataManager.hpp  YouTubeMetadataFetcher.cpp  YouTubeMetadataFetcher.hpp
YTBLND_src/UILayer/: ActiveBlendsPanel.cpp  ActiveBlendsPanel.hpp  BlendChatPanel.cpp  BlendChatPanel.h  BlendChatPanel.hpp  BlendCreationPanel.cpp  BlendCreationPanel.h  BlendCreationPanel.hpp  BlendFeedPanel.cpp  BlendFeedPanel.h  BlendFeedPanel.hpp  ButtonsConfig.cpp  ButtonsConfig.hpp  ConfirmationDialog.cpp  ConfirmationDialog.h  ConfirmationDialog.hpp  DataInstructionsPanel.cpp  DataInstructionsPanel.h  DataInstructionsPanel.hpp  IRefreshablePanel.hpp  LoginPanel.cpp  LoginPanel.h  LoginPanel.hpp  MainFrame.cpp  MainFrame.h  MainFrame.hpp  OperationProgressDialog.cpp  OperationProgressDialog.hpp  ResourcePathUtils.cpp  ResourcePathUtils.hpp  SettingsPanel.cpp  SettingsPanel.hpp  TopBar.cpp  TopBar.h  TopBar.hpp  UIColors.cpp  UIColors.h  UIColors.hpp  UIPages.h  UIPages.hpp  (+8 more)
YTBLND_src/UILayer.old/: BlendChatPanel.cpp  BlendChatPanel.hpp  BlendCreationPanel.cpp  BlendCreationPanel.hpp  BlendFeedPanel.hpp  ConfirmationDialog.cpp  DataInstructionsPanel.cpp  DataInstructionsPanel.hpp  LoginPanel.cpp  LoginPanel.hpp  MainFrame.cpp  TopBar.cpp  UIColors.hpp  UIPages.hpp  UserPanel.cpp  UserPanel.hpp  VideoCard.cpp
YTBLND_src/resources/: purple_neon_synth.eps  theme.txt
YTBLND_src/tests/: Test_AppInfr.cpp  Test_Auth.cpp  Test_BlendCreationPanel.cpp  Test_BlendManagement.cpp  Test_ChatPersistence.cpp  Test_LiveBackendConnectivity.cpp  Test_Model.cpp  Test_ModelToString.cpp  Test_ServiceLayerWrappers.cpp  Test_ThemeSwitching.cpp  Test_WatchLaterBlend.cpp
YTBLND_src/tests/fixtures/: Anime-videos.csv  Nightcore-videos.csv  cool_chill_music_sample_playlist.csv  jas_watch_later-videos.csv  more_music_sample_playlist.csv  sham_watch_later_vids.csv
YTBLND_src/ytblnd-backend/: Makefile  backup_manager.go  backup_manager_test.go  clear_db_data.sh  db_migration.go  db_migration_test.go  go.mod  go.sum  main.go  ytblnd-server.service
YTBLND_src/ytblnd-backend/data/: events.log.txt
YTBLND_src/ytblnd-backend/database_layer/: DataManager.go  SqliteDatabaseManager.go  models.go  sqlite_database_manager_test.go
YTBLND_src/ytblnd-backend/route_layer/: auth.go  auth_test.go  blends.go  chat.go  chat_test.go  logging.go
YTBLND_src/ytblnd-backend/ytblnd-server_data/: dev.db  events.log.txt  requests.log.txt  server.log.txt  ytblnd.db
YTBLND_src/ytblnd-backend/ytblnd-server_data_backups/snapshot-20260402-045842/: dev.db  events.log.txt  requests.log.txt
build-dev/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-dev/YTBLND_src/: CTestTestfile.cmake  Makefile  cmake_install.cmake  ytblnd  ytblnd_tests
build-dev/linux/: ytblnd-install.desktop  ytblnd.desktop
cmake/: GenerateLinuxDesktopLauncher.cmake
resources/linux/: ytblnd.desktop  ytblnd.desktop.in
